# GamblingSimulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RoflCasino.sln  RoflCasino.vcxproj  genconfs.bat  make.bat  make.py  make.sh  run.bat  run.py
.github/workflows/: build.yml  emscripten-build.yml  windows-build.yml
Source/: Main.cpp
Source/Core/: Slot.cpp  Slot.h
source/: Index.html  RoflCasino.vcxproj  main.cpp  packages.config
source/Application/: Application.cpp  Application.h  CMakeLists.txt  Display.cpp  Display.h  EventLoop.cpp  EventLoop.h  IEventListener.h  ISubscriable.h  Platform.cpp  Platform.h
source/Application/WebAssembly/: WebAssemblyUI.cpp  WebAssemblyUI.h
source/Application/Windows/: WindowsUI.cpp  WindowsUI.h
source/Core/: CMakeLists.txt  Lines.cpp  Lines.h  Slot.cpp  Slot.h  Symbols.cpp  Symbols.h
source/UnitTests/: CMakeLists.txt  TestSlot.cpp  gTestMain.cpp
